[package]
name = "v2ray_worker"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = "0.0.18"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"
uuid = "1.8.0"
getrandom = { version = "0.2", features = ["js"] }
wasm-bindgen = "0.2.89"